finish 15 cycles training and display result after one round training

--- a/.gitignore
+++ b/.gitignore
@@ -13,17 +13,17 @@
 .externalNativeBuild
 .cxx
 app/src/main/res/drawable/angel_gao.jpg
-/.app/src/main/res/drawable/beyonce_knowles_0001.jpg
-/.app/src/main/res/drawable/bill_clinton_0006.jpg
-/.app/src/main/res/drawable/bill_gates_0011.jpg
-/.app/src/main/res/drawable/david_shi.jpg
-/.app/src/main/res/drawable/faye_wong.jpg
-/.app/src/main/res/drawable/hassan_nasrallah_0001.jpg
-/.app/src/main/res/drawable/jimmy_kimmel_0001.jpg
-/.app/src/main/res/drawable/justin_timberlake_0002.jpg
-/.app/src/main/res/drawable/melissa_pan.jpg
-/.app/src/main/res/drawable/morgan_freeman_0001.jpg
-/.app/src/main/res/drawable/wei_wu_0001.jpg
-/.app/src/main/res/drawable/wen_jiabao_0005.jpg
-/.app/src/main/res/drawable/will_smith_0001.jpg
-/.app/src/main/res/drawable/yusaku_miyazato_0001.jpg
+app/src/main/res/drawable/beyonce_knowles_0001.jpg
+app/src/main/res/drawable/bill_clinton_0006.jpg
+app/src/main/res/drawable/bill_gates_0011.jpg
+app/src/main/res/drawable/david_shi.jpg
+app/src/main/res/drawable/faye_wong.jpg
+app/src/main/res/drawable/hassan_nasrallah_0001.jpg
+app/src/main/res/drawable/jimmy_kimmel_0001.jpg
+app/src/main/res/drawable/justin_timberlake_0002.jpg
+app/src/main/res/drawable/melissa_pan.jpg
+app/src/main/res/drawable/morgan_freeman_0001.jpg
+app/src/main/res/drawable/wei_wu_0001.jpg
+app/src/main/res/drawable/wen_jiabao_0005.jpg
+app/src/main/res/drawable/will_smith_0001.jpg
+app/src/main/res/drawable/yusaku_miyazato_0001.jpg
